added comments, redid openapi to be more accurate, moved id ripper into its own file, changed the object creation of ErrorArray and moved it inside the function
